# guanlan

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  P2-最小闭环.md  P2.1-摄入写入纪律.md  P3-健康与图谱.md  P3.1-别名解析.md  P3.10-页型目录一致性.md  P3.11-断链最近页建议.md  P3.2-缺失实体物化.md  P3.3-规范标题页与别名收编.md  P3.4-索引回填.md  P3.5-图谱分析.md  P3.6-图论桥与割点.md  P3.7-语义审计-草案.md  P3.7-语义审计.md  P3.8-链接归一.md  P3.9-源撤回.md  P4-Web宿主.md  P4.1-Web投喂.md  P4.10-MCP宿主.md  P4.11-信任边界.md  P4.12-Web语义审计.md  P4.13-Web-mermaid渲染.md  P4.14-Web数学化学代码渲染.md  P4.15-Web工具确认.md  P4.16-Web目标续跑.md  P4.17-MCP远程传输.md  P4.2-会话落盘.md  P4.3-Web-heal.md  P4.4-Web斜杠命令.md  P4.5-可写Web工作会话.md  P4.6-Web上传与晋级.md  P4.6.1-暂存区确定性解析与图片晋级.md  P4.7-中英双语.md  P4.8-Web回填.md  P4.9-只读多会话.md  P5.0-检索层.md  P5.1-Web检索接入.md  P5.2-多格式摄入.md  P5.2.1-图片落盘.md  P5.3-检索backlink重排.md  (+7 more)
docs/backlog/notes/: agentao-嵌入文件权限边界需求.md  broken-link-handling-survey.md  cjk-retrieval-enhancements.md  finding-持久抑制-未排期.md  gbrain-v0.42.53-反向审计-guanlan缺陷.md  gbrain-反向评审结论.md  gbrain-知识库访问-tools设计.md  llm_wiki-反向评审-v0.6.md  nashsu-llm_wiki-反向评审结论.md  next-milestone-and-graph-viz.md  openkb-2026-07-反向评审.md  openkb-反向评审结论.md  p3.7-语义审计-raw_digest写入主体未决.md  p6-技能蒸馏-工作法归属未决.md  sag-反向评审结论.md  sag-对接-tool注入.md  未来工作计划-反向评审收口.md
docs/guide/: README.md
docs/guide/en/: 01-installation.md  02-quickstart.md  03-cli-commands.md  04-maintenance.md  05-web-host.md  06-mcp-host.md  07-convert.md
docs/guide/zh/: 01-安装.md  02-快速上手.md  03-cli-命令.md  04-维护-体检-图谱.md  05-web-宿主.md  06-mcp-宿主.md  07-多格式转换.md
examples/: AGENTAO.full.md  AGENTAO.md  AGENTAO.readonly.md  SCHEMA.md
examples/wiki/: index.md  log.md  overview.md
guanlan/: __init__.py  __main__.py  audit.py  check.py  cli.py  convert.py  errors.py  fmrepair.py  gate.py  graph.py  graphstats.py  heal.py  health.py  imageio.py  ingest.py  init.py  lint.py  pages.py  paths.py  provenance.py  query.py  rawio.py  reindex.py  remove.py  runtime.py  search.py  skill.py
guanlan/mcp/: __init__.py  server.py  tools.py
guanlan/web/: __init__.py  app.py  chat.py  chat_support.py  conversation.py  conversation_store.py  goal_io.py  helpers.py  jobs.py  parsefeed.py  policy_fs.py  promote.py  rawfeed.py  render.py  server.py  uploads.py  workspace.py
guanlan/web/static/: app.css  app.js  attach.js  boot.js  chat.js  code_enhance.js  content_enhance.js  core.js  i18n.js  i18n_apply.js  index.html  jobs.js  math_enhance.js  mermaid_enhance.js  reports.js  staging.js  wiki.js
scripts/: smoke_p415.py  smoke_p416.py
skills/guanlan-wiki/: SKILL.md
skills/guanlan-wiki/references/: conventions.md
skills/pdf-to-markdown/: SKILL.md
skills/pdf-to-markdown/scripts/: convert.py
tests/: conftest.py  test_aliases.py  test_atomic_write.py  test_audit.py  test_check.py  test_cli.py  test_convert.py  test_fmrepair.py  test_gate.py  test_graph.py  test_graphstats.py  test_heal.py  test_health.py  test_ingest.py  test_init.py  test_link_fold.py  test_lint.py  test_mcp.py  test_pages.py  test_query.py  test_reindex.py  test_remove.py  test_runtime.py  test_search.py  test_search_quality.py  test_skill.py  test_web.py  test_web_i18n.py
