[project]
name = "guanlan"
version = "0.1.0"
description = "观澜 — 增量构建并维护结构化、互链的 markdown 知识 wiki（Karpathy LLM Wiki 模式）"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "jin-bo" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/jin-bo/guanlan"
Repository = "https://github.com/jin-bo/guanlan"

[project.scripts]
guanlan = "guanlan.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guanlan"]

# 把仓库根的 init 模板打进 wheel（安装后 guanlan/_templates/ 即模板源）。
# 开发期不走这条路：init 直接读仓库根 examples/（见 guanlan/init.py:_templates_dir）。
[tool.hatch.build.targets.wheel.force-include]
"examples/AGENTAO.md" = "guanlan/_templates/AGENTAO.md"
"examples/SCHEMA.md" = "guanlan/_templates/SCHEMA.md"
"examples/wiki" = "guanlan/_templates/wiki"
