# 注：PyPI 发布名（distribution name）是 guanlan-wiki —— 裸名 `guanlan` 已被另一无关项目占用。
# 导入名与 CLI 仍是 `guanlan`（见 [tool.hatch] packages 与 [project.scripts]），只有 pip 安装名不同。
[project]
name = "guanlan-wiki"
version = "0.1.0"
description = "观澜 — 增量构建并维护结构化、互链的 markdown 知识 wiki（Karpathy LLM Wiki 模式）"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "jin-bo", email = "jinbobo@gmail.com" }]
keywords = ["wiki", "knowledge-base", "llm", "agent", "markdown", "karpathy", "rag", "agentao"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    # [cli] extra 带 rich/prompt-toolkit/readchar/pygments —— `agentao run` 控制台脚本预检需要，
    # wrapper 经子进程调它（见 guanlan/runtime.py），缺 extra 则 ingest/query 立即失败。
    "agentao[cli]>=0.4.8",
    "pyyaml>=6",        # P2 check：解析页面 frontmatter（见 docs/P2-最小闭环.md 决策2）
]

[project.optional-dependencies]
# Web 宿主（P4，可选叠加层，见 docs/P4-Web宿主.md 决策P4-2）：核心 `guanlan` 安装不背这些，
# 装了 `guanlan[web]` 才有 `guanlan web`。markdown 缺失时单页渲染回退 <pre>，仍可跑。
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "markdown>=3",
]

[project.urls]
Homepage = "https://github.com/jin-bo/guanlan"
Repository = "https://github.com/jin-bo/guanlan"
Issues = "https://github.com/jin-bo/guanlan/issues"

[project.scripts]
guanlan = "guanlan.cli:main"

[dependency-groups]
# playwright 仅用于本地调试 Web 宿主前端（截图/交互验证，非测试套件依赖）；浏览器二进制另需
# 跑一次 `uv run playwright install chromium`。
dev = ["pytest>=8.0", "playwright>=1.60"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guanlan"]
# 注：Web 宿主前端静态资源（guanlan/web/static/*）随 `packages = ["guanlan"]` 自动入 wheel
# ——hatchling 对选中的包目录连同其非 .py 文件一并打包（已 `uv build` 验证），无需额外 artifacts。

# 把仓库根的 init 模板打进 wheel（安装后 guanlan/_templates/ 即模板源）。
# 开发期不走这条路：init 直接读仓库根 examples/（见 guanlan/init.py:_templates_dir）。
[tool.hatch.build.targets.wheel.force-include]
"examples/AGENTAO.md" = "guanlan/_templates/AGENTAO.md"
"examples/SCHEMA.md" = "guanlan/_templates/SCHEMA.md"
"examples/wiki" = "guanlan/_templates/wiki"
# 维护引擎 skill 随包携带；安装态下由 wrapper 幂等装入 ~/.agentao/skills/（见 guanlan/skill.py）。
"skills/guanlan-wiki" = "guanlan/_skill/guanlan-wiki"
