# 注：PyPI 发布名（distribution name）是 guanlan-wiki —— 裸名 `guanlan` 已被另一无关项目占用。
# 导入名与 CLI 仍是 `guanlan`（见 [tool.hatch] packages 与 [project.scripts]），只有 pip 安装名不同。
[project]
name = "guanlan-wiki"
# 版本号单一来源：`guanlan/__init__.py:__version__`（见下方 [tool.hatch.version]）。
# 故此处用 dynamic、不写死，避免 pyproject 与 __init__ 漂移（曾 0.1.1.dev0 vs 0.1.0 不一致）。
dynamic = ["version"]
description = "观澜 — 增量构建并维护结构化、互链的 markdown 知识 wiki（Karpathy LLM Wiki 模式）"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "jin-bo", email = "jinbobo@gmail.com" }]
keywords = ["wiki", "knowledge-base", "llm", "agent", "markdown", "karpathy", "rag", "agentao"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    # [cli] extra 带 rich/prompt-toolkit/readchar/pygments —— `agentao run` 控制台脚本预检需要，
    # wrapper 经子进程调它（见 guanlan/runtime.py），缺 extra 则 ingest/query 立即失败。
    "agentao[cli]>=0.4.9",
    "pyyaml>=6",        # P2 check：解析页面 frontmatter（见 docs/P2-最小闭环.md 决策2）
]

[project.optional-dependencies]
# Web 宿主（P4，可选叠加层，见 docs/P4-Web宿主.md 决策P4-2）：核心 `guanlan` 安装不背这些，
# 装了 `guanlan[web]` 才有 `guanlan web`。markdown 缺失时单页渲染回退 <pre>，仍可跑。
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "markdown>=3",
    # multipart 文件上传（P4.6 `POST /api/upload`）：FastAPI 的 UploadFile/File 解析 multipart
    # 须装 `python-multipart`，否则定义该端点时 FastAPI 启动即 RuntimeError（不靠 fastapi 传递）。
    "python-multipart>=0.0.9",
    # app.py 直接 import anyio（to_thread 卸阻塞调用）；显式声明而非靠 fastapi 传递。
    # 须 >=4.1：投喂端点 `to_thread.run_sync(..., abandon_on_cancel=True)` 用的 kwarg 自 4.1.0
    # 起才有（3.x 只有 `cancellable=`），不钉则可能传递解析到 anyio 3 → 每次 POST /api/raw 即 TypeError。
    "anyio>=4.1",
]
# MCP 宿主（P4.10，可选叠加层，见 docs/P4.10-MCP宿主.md 决策P4.10-2/14）：装了 `guanlan-wiki[mcp]`
# 才有 `guanlan mcp`（只读 MCP 服务端，stdio）。官方 `mcp` SDK v1.x 为当前 stable、v2 尚 alpha，
# 故加 `<2` 上界防破坏性升级；下界 1.27 取已验证支持结构化输出（协议 ≥2025-06-18）的稳定版。
mcp = [
    "mcp>=1.27,<2",
    # server.py 直接 import anyio（to_thread 卸 ask 子进程/读盘），显式声明而非靠 mcp 传递。
    "anyio>=4.1",
]

[project.urls]
Homepage = "https://github.com/jin-bo/guanlan"
Repository = "https://github.com/jin-bo/guanlan"
Documentation = "https://github.com/jin-bo/guanlan/tree/main/docs/guide"
Issues = "https://github.com/jin-bo/guanlan/issues"

[project.scripts]
guanlan = "guanlan.cli:main"

[dependency-groups]
# playwright 仅用于本地调试 Web 宿主前端（截图/交互验证，非测试套件依赖）；浏览器二进制另需
# 跑一次 `uv run playwright install chromium`。
dev = ["pytest>=8.0", "playwright>=1.60"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 版本号从 `guanlan/__init__.py:__version__` 读取（单一来源，配合 [project] dynamic）。
[tool.hatch.version]
path = "guanlan/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["guanlan"]
# 注：Web 宿主前端静态资源（guanlan/web/static/*）随 `packages = ["guanlan"]` 自动入 wheel
# ——hatchling 对选中的包目录连同其非 .py 文件一并打包（已 `uv build` 验证），无需额外 artifacts。

# 把仓库根的 init 模板打进 wheel（安装后 guanlan/_templates/ 即模板源）。
# 开发期不走这条路：init 直接读仓库根 examples/（见 guanlan/init.py:_templates_dir）。
[tool.hatch.build.targets.wheel.force-include]
"examples/AGENTAO.md" = "guanlan/_templates/AGENTAO.md"
"examples/SCHEMA.md" = "guanlan/_templates/SCHEMA.md"
"examples/wiki" = "guanlan/_templates/wiki"
# 维护引擎 skill 随包携带；安装态下由 wrapper 幂等装入 ~/.agentao/skills/（见 guanlan/skill.py）。
"skills/guanlan-wiki" = "guanlan/_skill/guanlan-wiki"
# 辅助 skill pdf-to-markdown（P4.6）：供可写会话 Agent 把上传的 PDF/DOCX/… 解析成 Markdown
# 暂存物（再经人审晋级为 raw/ 源）。同样随包携带、由 skill.py 幂等装入全局供 Agent 发现。
"skills/pdf-to-markdown" = "guanlan/_skill/pdf-to-markdown"
